changed maven plugin to automatic module